# jsmde

./: .gitignore  README.md  RELEASE.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_rag.sql
src-tauri/src/: keychain.rs  lib.rs  paths.rs
src-tauri/src/ai/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/commands/: ai.rs  fs.rs  mod.rs  rag.rs  sync.rs
src-tauri/src/db/: mod.rs
src-tauri/src/rag/: chunk.rs  embed.rs  index.rs  mod.rs  search.rs
src-tauri/src/sync/: conflict.rs  engine.rs  mod.rs
src-tauri/src/sync/backends/: gdrive.rs
src-tauri/src/workspace/: watcher.rs
src/lib/: tauri.ts
src/lib/ai/: ChatPanel.svelte  client.ts  providers.ts  store.svelte.ts
src/lib/editor/: BubbleMenu.svelte  Editor.svelte  SlashMenu.svelte  extensions.ts  markdown.spec.ts  markdown.ts  slashCommands.ts
src/lib/rag/: client.ts  store.svelte.ts
src/lib/settings/: CloudPane.svelte  RagPane.svelte  SettingsModal.svelte
src/lib/sync/: client.ts  store.svelte.ts
src/lib/workspace/: FileTree.svelte  store.svelte.ts
src/routes/: +page.svelte  layout.css
