[package]
name = "app"
version = "0.1.9"
description = "jsmde"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "io-util", "sync"] }
notify = "8"
notify-debouncer-full = "0.6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
url = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
tiny_http = "0.12"
directories = "5"
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
base64 = "0.22"
hex = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
